--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <h3>
 <a name="donate-1-" class="anchor" href="#donate-1-"><span class="octicon octicon-link"></span></a>Donate $1 :)</h3>
 
-<p><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_donations&amp;business=C5UCDC8HT84YY&amp;lc=US&amp;item_number=jgmaps&amp;currency_code=USD&amp;bn=PP%2dDonationsBF%3abtn_donate_SM%2egif%3aNonHosted" target="_blank">Buy me a coffee</a></p>
+<p><a target="_blank">Buy me a coffee</a></p>
 
 <h4>
 <a name="simple-example" class="anchor" href="#simple-example"><span class="octicon octicon-link"></span></a>Simple example:</h4>
