Change button donate in page

--- a/index.html
+++ b/index.html
@@ -81,9 +81,7 @@
         <h4>
           <a name="simple-example" class="anchor" href="#simple-example"><span class="octicon octicon-link"></span></a>Simple example:</h4>
 
-          <pre>
-$('#map').jgmaps();
-          </pre>
+          <pre>$('#map').jgmaps();</pre>
         </section>
       </div>
 
